Description : description and comment is getting textwrap Bug ID: NA

--- a/trunk/technical/src/apps/user/patientcare/src/app.css
+++ b/trunk/technical/src/apps/user/patientcare/src/app.css
@@ -227,6 +227,7 @@ TextField {
 Label {
     font-family: 'Open Sans';
     font-weight: 300;
+    overflow-wrap: break-word;
     /* font-size: 14; */
     /* Regular Open Sans */
 }
